Use node.exe v4.4.4

--- a/SatoriPortal/Web.cloud.config
+++ b/SatoriPortal/Web.cloud.config
@@ -21,6 +21,7 @@
       debuggingEnabled="false"
       loggingEnabled="false"
       devErrorsEnabled="false"
+      node_env="production" nodeProcessCommandLine="D:\node.exe"
     />
 
     <!-- indicates that the server.js file is a node.js application 
