--- a/private/src/AzureSatori/SatoriPortal/tsconfig.json
+++ b/private/src/AzureSatori/SatoriPortal/tsconfig.json
@@ -8,7 +8,8 @@
         "preserveConstEnums": true,
         "sourceMap": true,
         "allowUnreachableCode": false,
-        "noImplicitReturns": true
+        "noImplicitReturns": true,
+        "charset": "utf8"
     },
 
     "files": [
