Add AzureAD authentication

--- a/private/src/AzureSatori/SatoriPortal/Web.cloud.config
+++ b/private/src/AzureSatori/SatoriPortal/Web.cloud.config
@@ -13,9 +13,17 @@
     <add key="ServiceBusIssuerSecretKey" value="" />
     -->
   </appSettings>
+  <system.web>
+    <httpRuntime maxQueryStringLength="10240" maxUrlLength="20240" />
+  </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="false" />
-    
+    <security>
+    <requestFiltering>
+      <requestLimits maxQueryString="10240"/>
+    </requestFiltering>
+    </security>
+  
     <!-- NOTE: By default, debugging and logging are unsecure and should not be enabled for production applications in the cloud.-->
     <iisnode 
       debuggingEnabled="false"
@@ -29,6 +37,7 @@
     <handlers>
       <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
     </handlers>
+    <httpErrors existingResponse="PassThrough" />
     <rewrite>
       <rules>
         <clear />
