--- a/private/src/AzureSatori/SatoriPortal/Web.config
+++ b/private/src/AzureSatori/SatoriPortal/Web.config
@@ -14,9 +14,16 @@
     <add key="ServiceBusIssuerSecretKey" value="" />
     -->
   </appSettings>
+  <system.web>
+    <httpRuntime maxQueryStringLength="10240" maxUrlLength="20240" />
+  </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="false" />
-
+ <security>
+    <requestFiltering>
+      <requestLimits maxQueryString="10240"/>
+    </requestFiltering>
+  </security>
     <!-- indicates that the server.js file is a node.js application 
     to be handled by the iisnode module -->
     <handlers>
