--- a/private/src/AzureSatori/SatoriPortal/package.json
+++ b/private/src/AzureSatori/SatoriPortal/package.json
@@ -1,35 +1,1 @@
-
-{
-	"name" : "SatoriPortal",
-	"version" : "0.0.0",
-	"private" : true,
-	"scripts" :
-	{
-		"start" : "node ./server.js"
-	},
-	"dependencies" :
-	{
-		"body-parser" : "~1.13.2",
-		"cookie-parser" : "~1.3.5",
-		"debug" : "~2.2.0",
-		"express" : "~4.13.1",
-		"grunt" : "^0.4.5",
-		"grunt-cli" : "^1.1.0",
-		"grunt-contrib-jshint" : "^1.0.0",
-		"grunt-contrib-less" : "^1.2.0",
-		"grunt-contrib-nodeunit" : "^1.0.0",
-		"grunt-contrib-watch" : "^1.0.0",
-		"grunt-ts" : "^5.5.0-beta.2",
-		"jade" : "~1.11.0",
-		"morgan" : "~1.6.1",
-		"passport" : "^0.3.2",
-		"passport-azure-ad" : "^1.4.5",
-		"serve-favicon" : "~2.3.0",
-		"typescript" : "^1.8.9"
-	},
-	"engines" :
-	{
-		"node" : "0.10.21",
-		"iisnode" : "0.1.21"
-	}
-}
+{"name":"SatoriPortal","version":"0.0.0","private":true,"scripts":{"start":"node ./server.js"},"dependencies":{"body-parser":"~1.13.2","cookie-parser":"~1.3.5","debug":"~2.2.0","express":"~4.13.1","express-session":"^1.13.0","grunt":"^0.4.5","grunt-cli":"^1.1.0","grunt-contrib-jshint":"^1.0.0","grunt-contrib-less":"^1.2.0","grunt-contrib-nodeunit":"^1.0.0","grunt-contrib-watch":"^1.0.0","grunt-ts":"^5.5.0-beta.2","jade":"~1.11.0","morgan":"~1.6.1","passport":"^0.3.2","passport-azure-ad":"^1.4.5","serve-favicon":"~2.3.0","typescript":"^1.8.9"},"engines":{"node":"0.10.21","iisnode":"0.1.21"}}
