--- a/private/src/AzureSatori/SatoriPortal/Web.config
+++ b/private/src/AzureSatori/SatoriPortal/Web.config
@@ -15,15 +15,19 @@
     -->
   </appSettings>
   <system.web>
-    <httpRuntime maxQueryStringLength="10240" maxUrlLength="20240" />
+    <httpRuntime targetFramework="4.5" maxQueryStringLength="10240" maxUrlLength="20240" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="false" />
- <security>
-    <requestFiltering>
-      <requestLimits maxQueryString="10240"/>
-    </requestFiltering>
-  </security>
+    <!-- mimeMap enables IIS to serve particular file types as specified by fileExtension. -->
+    <staticContent>
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+    </staticContent>
+    <security>
+      <requestFiltering>
+        <requestLimits maxQueryString="10240"/>
+      </requestFiltering>
+    </security>
     <!-- indicates that the server.js file is a node.js application 
     to be handled by the iisnode module -->
     <handlers>
