--- a/private/src/AzureSatori/SatoriPortal/Web.cloud.config
+++ b/private/src/AzureSatori/SatoriPortal/Web.cloud.config
@@ -14,14 +14,18 @@
     -->
   </appSettings>
   <system.web>
-    <httpRuntime maxQueryStringLength="10240" maxUrlLength="20240" />
+    <httpRuntime targetFramework="4.5" maxQueryStringLength="10240" maxUrlLength="20240" />
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="false" />
+    <!-- mimeMap enables IIS to serve particular file types as specified by fileExtension. -->
+    <staticContent>
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+    </staticContent>
     <security>
-    <requestFiltering>
-      <requestLimits maxQueryString="10240"/>
-    </requestFiltering>
+      <requestFiltering>
+        <requestLimits maxQueryString="10240"/>
+      </requestFiltering>
     </security>
   
     <!-- NOTE: By default, debugging and logging are unsecure and should not be enabled for production applications in the cloud.-->
