--- a/private/src/AzureSatori/SatoriPortal/tsconfig.json
+++ b/private/src/AzureSatori/SatoriPortal/tsconfig.json
@@ -10,7 +10,7 @@
         "allowUnreachableCode": false,
         "noImplicitReturns": true,
         "charset": "utf8",
-        "outDir": "./dist"
+        "outDir": "dist/"
     },
     "files": [
         "app.ts",
