ejs render refine

--- a/private/src/AzureSatori/SatoriPortal/tsconfig.json
+++ b/private/src/AzureSatori/SatoriPortal/tsconfig.json
@@ -15,6 +15,7 @@
         "app.ts",
         "common/logger.ts",
         "common/layoutRender.ts",
+        "common/layoutUtil.ts",
         "common/sysinfo.ts",
         "common/authentication.ts",
         "common/backendservice.ts",
@@ -23,7 +24,8 @@
         "common/satori-rest-client/jobservice.ts",
         "common/satori-rest-client/requestutil.ts",
         "common/satori-rest-client/utils.ts",
-        "common/util/index.ts",
+        "common/util.ts",
+        "routes/admin.ts",
         "routes/main.ts",
         "routes/index.ts",
         "routes/users.ts",
