TemplateData, remove log4js

--- a/private/src/AzureSatori/SatoriPortal/tsconfig.json
+++ b/private/src/AzureSatori/SatoriPortal/tsconfig.json
@@ -17,7 +17,8 @@
         "common/backendservice.ts",
         "common/layoutRender.ts",
         "common/layoutUtil.ts",
-        "common/logger.ts",
+        "common/logger/index.ts",
+        "common/logger/logger.ts",
         "common/satori-rest-client/configuration.ts",
         "common/satori-rest-client/index.ts",
         "common/satori-rest-client/jobservice.ts",
@@ -26,6 +27,8 @@
         "common/sysinfo.ts",
         "common/util.ts",
         "models/HttpError.ts",
+        "public/javascripts/homepage/sp.ts",
+        "public/javascripts/homepage/spfx.ts",
         "routes/admin.ts",
         "routes/index.ts",
         "routes/main.ts",
