--- a/private/src/AzureSatori/SatoriPortal/package.json
+++ b/private/src/AzureSatori/SatoriPortal/package.json
@@ -13,8 +13,9 @@
     "ejs": "2.4.1",
     "express": "4.13.1",
     "express-session": "^1.13.0",
+    "fs-extra": "^0.30.0",
     "lodash": "4.12.0",
-    "log4js": "^0.6.36",
+    "log4js": "~0.6.36",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-azure-ad": "~1.4.5",
