--- a/src/AzureCloudService/WebRole1/package.json
+++ b/src/AzureCloudService/WebRole1/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server.js"
+    "start": "node ./server.js",
+    "build": "webpack"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
     "content-type": "~1.0.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "ejs": "2.4.1",
+    "ejs": "^2.5.5",
     "express": "4.13.1",
     "express-session": "^1.13.0",
     "fs-extra": "^0.30.0",
@@ -34,6 +35,7 @@
     "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-ts": "^5.5.0-beta.2",
-    "typescript": "^2.1.4"
+    "typescript": "^2.1.4",
+    "webpack": "^2.2.1"
   }
 }
